<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/clear_test_data"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobil_data_hint"
        android:text="@string/reset_test"
        app:layout_constraintEnd_toStartOf="@+id/check_network"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobil_data_hint" />

    <Button
        android:id="@+id/send_statistic"
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobil_data_hint"
        android:text="@string/send_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testResult" />

    <com.ale.ltechecker.guielements.ResizeTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/app_title"
        android:textSize="44sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction"
        style="@style/InfoMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="24dp"
        android:text="@string/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/wifi_section_title"
        style="@style/SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:layout_marginTop="16dp"
        android:text="@string/wifi_section_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <com.ale.ltechecker.guielements.ResizeTextView
        android:id="@+id/wifiHint"
        style="@style/InfoMessage.SectionHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_section_title"
        android:text="@string/wifi_section_hint"
        app:layout_constraintEnd_toStartOf="@+id/wifiStatus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_section_title" />


    <Button
        android:id="@+id/wifiStatus"
        style="@style/Buttons.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mobil_data_title"
        android:layout_below="@id/instruction"
        android:text="@string/unknown"
        app:layout_constraintBottom_toTopOf="@+id/mobil_data_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wifiHint"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <TextView
        android:id="@+id/mobil_data_title"
        style="@style/SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobile_data_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifiHint" />

    <com.ale.ltechecker.guielements.ResizeTextView
        android:id="@+id/mobil_data_hint"
        style="@style/InfoMessage.SectionHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobil_data_title"
        android:text="@string/mobile_data_hint"
        app:layout_constraintEnd_toStartOf="@+id/mobile_data_status"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobil_data_title" />

    <Button
        android:id="@+id/mobile_data_status"
        style="@style/Buttons.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/check_network"
        android:layout_below="@id/wifiHint"
        android:layout_alignParentEnd="true"
        android:text="@string/unknown"
        app:layout_constraintBottom_toBottomOf="@+id/mobil_data_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mobil_data_hint"
        app:layout_constraintTop_toBottomOf="@+id/wifiStatus" />

    <Button
        android:id="@+id/check_network"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobil_data_hint"

        android:text="@string/check_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_test_data"
        app:layout_constraintTop_toBottomOf="@+id/mobil_data_hint" />


    <Button
        android:id="@+id/testResult"
        style="@style/Buttons.Indicator"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_below="@id/check_network"
        android:layout_gravity="center_horizontal"
        android:text="@string/not_tested"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_network"
        tools:text="Not tested" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>